index changes-added 2 more placeholders for additional pieces of work so i have accurate spacing for full images once i create more websites. style changes-fixed broken aside bar that shrunk with page, forgot to give the mark section a container so it didnt always take up the same space, credits to sandesh for helping, as well as slight changes to sizing of divs in work me section.

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -52,6 +52,11 @@ aside {
 /* name and photo */
 mark {
     background-color: var(--section-background-color);
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 aside h1 {
@@ -78,7 +83,7 @@ nav {
     display: inline-flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 75%;
 }
 
 aside nav ul li, aside nav ul li a {
@@ -88,13 +93,13 @@ aside nav ul li, aside nav ul li a {
 
 aside nav ul {
     background-color: var(--section-background-color);
-    display: inline-flex;
+    height: 100%;
+    padding: 0;
+    list-style: none;
+    display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-content: center;
-    flex-wrap: wrap;
+    justify-content: space-around;
     text-align: center;
-    height: 75%;
 
 }
 
@@ -151,7 +156,7 @@ section {
 }
 
 .my-work div {
-    width: 30%;
+    width: 28%;
     display: inline-flex;
     flex-direction: column;
     text-align: center;
@@ -196,6 +201,10 @@ section {
     color: black;
 }
 
+.contact-me li {
+    margin: 0 2% 0 2%;
+}
+
 .contact-me ul{
     width: 98%;
     display: inline-flex;
@@ -208,7 +217,7 @@ section {
     border-radius: var(--border-radius);
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
     /* header */
     aside {
         display: inline-block;
@@ -233,7 +242,7 @@ section {
     }
 
     .my-work div {
-        width: 40%;
+        width: 43%;
         display: inline-flex;
         flex-direction: column;
         text-align: center;
@@ -248,9 +257,5 @@ section {
         width: 100%;
         display: flex;
         flex-wrap: wrap;
-    }
-
-    .contact-me ul li {
-        margin: 1%;
     }
 }
